# rust-todo

./: .gitignore  Cargo.toml
src/: gateway.rs  infra.rs  lib.rs  main.rs
src/gateway/: mod.rs
src/gateway/controller/: cli.rs  mod.rs
src/gateway/presenter/: text.rs
src/infra/: file.rs  memory.rs  mod.rs  rand.rs
src/usecase/: mod.rs
tests/: usecase_test.rs
