[package]
name = "todo"
version = "0.1.0"
authors = ["tomocy <tomocy.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.8"
rand = "0.7.3"
clap = "2.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
